added JSON writer, process jobs and docker configs