@@ -1,25 +1,21 @@
 package com.demo.notes.service;
 
-import com.demo.notes.parquet.CustomParquetWriter;
+import com.demo.notes.domain.DataTypeEnum;
+import com.demo.notes.entity.NoteEntity;
+import com.demo.notes.entity.UserEntity;
+import com.demo.notes.processing.json.JsonWriter;
+import com.demo.notes.processing.parquet.ParquetWriter;
 import com.demo.notes.repository.NoteRepository;
 import com.demo.notes.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.apache.hadoop.fs.Path;
-import org.apache.parquet.hadoop.metadata.CompressionCodecName;
-import org.apache.parquet.schema.MessageType;
-import org.apache.parquet.schema.MessageTypeParser;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.PostConstruct;
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,39 +23,33 @@ public class JobService {
 
     private final NoteRepository noteRepository;
     private final UserRepository userRepository;
+    private final JsonWriter jsonWriter;
+    private final ParquetWriter parquetWriter;
 
-    private final Logger logger = LoggerFactory.getLogger(JobService.class);
-
-    @PostConstruct
-    public void writeNotes() throws IOException {
-        final var columns = getNotes();
-        final var schema = getSchemaForParquetFile();
-        final var writer = getParquetWriter(schema);
-
-        for (final var column : columns) {
-            logger.info("Writing line: " + Arrays.toString(column.toArray()));
-            writer.write(column);
+    public String writeParquet() {
+        try {
+            parquetWriter.write(getNotesAsList(), DataTypeEnum.NOTE);
+            parquetWriter.write(getUsersAsList(), DataTypeEnum.USER);
+        } catch (IOException e) {
+            e.printStackTrace();
+            return "Fail" + e.getMessage();
         }
-        logger.info("Finished writing Parquet file.");
-
-        writer.close();
+        return "Success";
     }
 
-    private CustomParquetWriter getParquetWriter(MessageType schema) throws IOException {
-        final var outputFilePath = getClass().getResource("/").getPath() + "output/" + System.currentTimeMillis() + ".parquet";
-        final var outputParquetFile = new File(outputFilePath);
-        final var path = new Path(outputParquetFile.toURI().toString());
-        return new CustomParquetWriter(path, schema, false, CompressionCodecName.SNAPPY);
+    public String writeJSON() {
+        try {
+            jsonWriter.writeData(getNotesAsMap());
+            jsonWriter.writeData(getUsersAsMap());
+        } catch (IOException e) {
+            e.printStackTrace();
+            return "Fail" + e.getMessage();
+        }
+        return "Success";
     }
 
-    private MessageType getSchemaForParquetFile() throws IOException {
-        final var resource = new File(getClass().getResource("/schemas/note.schema").getFile());
-        final var rawSchema = new String(Files.readAllBytes(resource.toPath()));
-        return MessageTypeParser.parseMessageType(rawSchema);
-    }
-
-    private List<List<String>> getNotes() {
-        return noteRepository.findAll(PageRequest.of(0, 200)).stream()
+    private List<List<String>> getNotesAsList() {
+        return noteRepository.findAll().stream()
                 .map(noteEntity -> {
                     List<String> list = new ArrayList<>();
                     list.add(noteEntity.getId().toString());
@@ -68,6 +58,47 @@ public class JobService {
                     list.add(noteEntity.getNote());
                     return list;
                 })
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private List<List<String>> getUsersAsList() {
+        return userRepository.findAll().stream()
+                .map(user -> {
+                    List<String> list = new ArrayList<>();
+                    list.add(user.getId().toString());
+                    list.add(user.getEmail());
+                    return list;
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<Map<String, Object>> getNotesAsMap() {
+        return noteRepository.findAll()
+                .stream()
+                .map(this::toMap)
+                .collect(Collectors.toList());
+    }
+
+    private List<Map<String, Object>> getUsersAsMap() {
+        return userRepository.findAll()
+                .stream()
+                .map(this::toMap)
+                .collect(Collectors.toList());
+    }
+
+    private Map<String, Object> toMap(NoteEntity note) {
+        final var map = new HashMap<String, Object>();
+        map.put("id", note.getId());
+        map.put("userId", note.getUserID());
+        map.put("title", note.getTitle());
+        map.put("note", note.getNote());
+        return map;
+    }
+
+    private Map<String, Object> toMap(UserEntity user) {
+        final var map = new HashMap<String, Object>();
+        map.put("id", user.getId());
+        map.put("userId", user.getEmail());
+        return map;
     }
 }
